--- a/Game_winform/Game_winform.csproj
+++ b/Game_winform/Game_winform.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Collision.cs" />
+    <Compile Include="Classes\Inimigo.cs" />
+    <Compile Include="Classes\Moviment.cs" />
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
